fixing some spacing issues

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -3,32 +3,26 @@ body {
 	background-color: black;
 }
 
-#description {
-	position: absolute;
-	left: 50px;
-	right: 50px;
-	top: 100px;
-	height: 100px;
-	background-color: black;
-	color: white;
-	border-radius: 5px;
-}
-
 #video_container {
 	position: absolute;
 	width: 600px;
-	height: 360;
-	right: 50px;
-	top: 200px;
-	bottom: 50px;
+	height: 360px;
+
+	left: 50%;
+	margin-left: 50px;
+	top: 50%;
+	margin-top: -180px;
 }
 
 #btapp_code {
 	position: absolute;
-	right: 700px;
-	left: 50px;
-	top: 200px;
-	bottom: 50px;
+	width: 600px;
+	height: 360px;
+
+	right: 50%;
+	margin-right: 50px;
+	top: 50%;
+	margin-top: -180px;
 }
 
 #btapp_code .prettyprint {
